[gd_scene load_steps=8 format=2]

[ext_resource path="res://Engine/Battle/Dodger/InstaShield.tscn" type="PackedScene" id=1]
[ext_resource path="res://Engine/Battle/Dodger/pawn_moving1.wav" type="AudioStream" id=2]
[ext_resource path="res://Engine/Battle/Dodger/instashield.wav" type="AudioStream" id=3]
[ext_resource path="res://Engine/Battle/Dodger/green_pawn.png" type="Texture" id=4]
[ext_resource path="res://Engine/Battle/Dodger/Pawn.gd" type="Script" id=5]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[sub_resource type="Animation" id=2]
resource_name = "invincible"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1 ),
"transitions": PoolRealArray( 0.999997, 0.999997, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.317647 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GreenPawn" type="Node2D"]
z_index = 25
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.447059, 0.815686, 0.192157, 1 )
light_mask = 0
position = Vector2( 0, 31 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="InstaShield" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, 31 )

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="ShieldDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="ShieldSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invincible = SubResource( 2 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
